--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 .question-block__title::after,
 .parts-block__title::before,
+.pagging__arrow::before,
 .spollers__title::before,
 [class*=_icon-]:before {
   font-family: "icons";
@@ -149,6 +150,11 @@ body {
 .service-menu-open body {
   scrollbar-width: none;
   -ms-overflow-style: none;
+  overflow: hidden;
+  -ms-touch-action: none;
+      touch-action: none;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
 }
 
 .service-menu-open body::-webkit-scrollbar {
@@ -493,17 +499,6 @@ textarea.input {
   visibility: visible;
 }
 
-.service-menu__wrapper::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  width: 16.875rem;
-  background: url("../img/menu-bg.png") 0 90%/100% no-repeat;
-}
-
 .service-menu__btn {
   color: #fff;
   font-weight: 600;
@@ -519,6 +514,19 @@ textarea.input {
   -ms-flex-line-pack: start;
       align-content: start;
   row-gap: 1.5rem;
+  width: 16.875rem;
+  height: 100%;
+  max-height: 53%;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.service-menu__list::-webkit-scrollbar {
+  display: none;
+}
+
+.service-menu__body {
   width: 16.875rem;
   height: 100%;
   border-right: 1px solid rgba(255, 255, 255, 0.2);
@@ -604,7 +612,7 @@ textarea.input {
   top: 0;
   left: 0;
   padding-left: 19.375rem;
-  row-gap: 1.25rem;
+  row-gap: 1.5625rem;
   -webkit-column-gap: 1.3125rem;
      -moz-column-gap: 1.3125rem;
           column-gap: 1.3125rem;
@@ -900,6 +908,91 @@ textarea.input {
   border-radius: 50%;
   border: 1px solid #131923;
   font-size: 1rem;
+}
+
+.pagging {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagging__arrow {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 4.5rem;
+  height: 4.5rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 4.5rem;
+          flex: 0 0 4.5rem;
+  border-radius: 50%;
+  border: 1px solid #131923;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pagging__arrow::before {
+  content: "\e900";
+  font-size: 1rem;
+  color: #131923;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.pagging__arrow_left::before {
+  -webkit-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+.pagging__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pagging__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 3rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 3rem;
+          flex: 0 0 3rem;
+  height: 3rem;
+  color: #000;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border-radius: 50%;
+}
+
+.pagging__item._active {
+  color: #fff;
+  background-color: #78dccd;
 }
 
 .header {
@@ -1657,6 +1750,12 @@ details > summary::-webkit-details-marker {
     max-width: 100%;
   }
 
+  .pagging__list {
+    -webkit-column-gap: 0.5rem;
+       -moz-column-gap: 0.5rem;
+            column-gap: 0.5rem;
+  }
+
   .spollers-footer__title::before {
     display: none;
   }
@@ -1871,6 +1970,16 @@ details > summary::-webkit-details-marker {
 
   .spollers__content {
     margin-top: 5rem;
+  }
+
+  .pagging {
+    margin-top: 6.5rem;
+  }
+
+  .pagging {
+    -webkit-column-gap: 7.5rem;
+       -moz-column-gap: 7.5rem;
+            column-gap: 7.5rem;
   }
 
   .footer {
@@ -2257,6 +2366,22 @@ details > summary::-webkit-details-marker {
 }
 
 @media (max-width: 47.99875em) {
+  .pagging__arrow {
+    width: 3.5rem;
+    height: 3.5rem;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 3.5rem;
+            flex: 0 0 3.5rem;
+  }
+
+  .pagging__item {
+    width: 2.5rem;
+    height: 2.5rem;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 2.5rem;
+            flex: 0 0 2.5rem;
+  }
+
   .footer__rights {
     max-width: 28.125rem;
   }
@@ -2392,6 +2517,16 @@ details > summary::-webkit-details-marker {
 
   .spollers__content {
     margin-top: 2rem;
+  }
+
+  .pagging {
+    margin-top: 3.5rem;
+  }
+
+  .pagging {
+    -webkit-column-gap: 1.25rem;
+       -moz-column-gap: 1.25rem;
+            column-gap: 1.25rem;
   }
 
   .header__container {
@@ -2712,6 +2847,34 @@ details > summary::-webkit-details-marker {
 @supports not (margin-top: clamp( 2rem , 0.8461538462rem  +  4.9230769231vw , 5rem )) {
     .spollers__content {
       margin-top: calc(2rem + 3 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports (margin-top: clamp( 3.5rem , 2.3461538462rem  +  4.9230769231vw , 6.5rem )) {
+    .pagging {
+      margin-top: clamp( 3.5rem , 2.3461538462rem  +  4.9230769231vw , 6.5rem );
+    }
+}
+
+@supports not (margin-top: clamp( 3.5rem , 2.3461538462rem  +  4.9230769231vw , 6.5rem )) {
+    .pagging {
+      margin-top: calc(3.5rem + 3 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports ((-moz-column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem )) or (column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem ))) {
+    .pagging {
+      -webkit-column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem );
+         -moz-column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem );
+              column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem );
+    }
+}
+
+@supports not ((-moz-column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem )) or (column-gap: clamp( 1.25rem , -1.1538461538rem  +  10.2564102564vw , 7.5rem ))) {
+    .pagging {
+      -webkit-column-gap: calc(1.25rem + 6.25 * (100vw - 23.4375rem) / 60.9375);
+         -moz-column-gap: calc(1.25rem + 6.25 * (100vw - 23.4375rem) / 60.9375);
+              column-gap: calc(1.25rem + 6.25 * (100vw - 23.4375rem) / 60.9375);
     }
 }
 
@@ -3097,6 +3260,15 @@ details > summary::-webkit-details-marker {
     background: #1861ce;
   }
 
+  .pagging__arrow:hover {
+    background-color: #1e78ff;
+    border: 1px solid #1e78ff;
+  }
+
+  .pagging__arrow:hover::before {
+    color: #fff;
+  }
+
   .footer__tg:hover,
   .footer__vk:hover {
     color: #78dccd;
@@ -3121,5 +3293,22 @@ details > summary::-webkit-details-marker {
 
   .search-page__button:hover {
     background-color: #195cc2;
+  }
+
+  .item-search__link:hover {
+    text-decoration: underline;
+  }
+}
+
+@media (min-height: 40em) {
+  .service-menu__wrapper::before {
+    content: "";
+    position: absolute;
+    height: 100vh;
+    bottom: 0;
+    left: 0;
+    width: 16.875rem;
+    background: url("../img/menu-bg.png") 0 90%/100% no-repeat;
+    z-index: -1;
   }
 }
