--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@
   border: 0px;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 *,
 *::before,
 *::after {
@@ -861,6 +865,10 @@ textarea.input {
   border-bottom: 0.0625rem solid #131923;
 }
 
+.spollers-plasticsurgery .spollers__item:not(:last-child) {
+  padding-bottom: 2rem;
+}
+
 .spollers__title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -894,6 +902,12 @@ textarea.input {
   color: #fff;
 }
 
+.spollers-plasticsurgery .spollers__title._spoller-active::before {
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
 .spollers__title::before {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -915,6 +929,12 @@ textarea.input {
   border-radius: 50%;
   border: 1px solid #131923;
   font-size: 1rem;
+}
+
+.spollers-plasticsurgery .spollers__title::before {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .pagging {
@@ -1028,11 +1048,16 @@ textarea.input {
           transform: rotate(-15.037deg) scale(0.5);
 }
 
+.changes-links__item:nth-last-child(2) .changes-links__image {
+  top: -100%;
+}
+
 .changes-links__item:last-child .changes-links__image {
   top: -280%;
 }
 
 .changes-links__image {
+  pointer-events: none;
   visibility: hidden;
   opacity: 0;
   width: 18.75rem;
@@ -1977,113 +2002,6 @@ details > summary::-webkit-details-marker {
   left: 0;
 }
 
-.changes-links {
-  display: -ms-grid;
-  display: grid;
-}
-
-.changes-links__item {
-  position: relative;
-  display: block;
-}
-
-.changes-links__item:not(:last-child) {
-  border-bottom: 0.0625rem solid #131923;
-}
-
-.changes-links__item:nth-child(odd) .changes-links__image {
-  -webkit-transform: rotate(15.037deg) scale(0.5);
-      -ms-transform: rotate(15.037deg) scale(0.5);
-          transform: rotate(15.037deg) scale(0.5);
-}
-
-.changes-links__item:nth-child(even) .changes-links__image {
-  -webkit-transform: rotate(-15.037deg) scale(0.5);
-      -ms-transform: rotate(-15.037deg) scale(0.5);
-          transform: rotate(-15.037deg) scale(0.5);
-}
-
-.changes-links__item:nth-last-child(2) .changes-links__image {
-  top: -100%;
-}
-
-.changes-links__item:last-child .changes-links__image {
-  top: -280%;
-}
-
-.changes-links__image {
-  pointer-events: none;
-  visibility: hidden;
-  opacity: 0;
-  width: 18.75rem;
-  height: 25rem;
-  aspect-ratio: 300/400;
-  overflow: hidden;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  position: absolute;
-  top: 0%;
-  right: 15%;
-}
-
-.changes-links__image img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.changes-links__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-column-gap: 1.25rem;
-     -moz-column-gap: 1.25rem;
-          column-gap: 1.25rem;
-  color: #131923;
-  font-weight: 300;
-  line-height: 1.25;
-}
-
-.changes-links__title::before {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  content: "\e900";
-  font-size: 1rem;
-  width: 4.5rem;
-  height: 4.5rem;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 4.5rem;
-          flex: 0 0 4.5rem;
-  border: 0.0625rem solid #131923;
-  border-radius: 50%;
-  -webkit-transform: rotate(-55deg);
-      -ms-transform: rotate(-55deg);
-          transform: rotate(-55deg);
-}
-
 .tabs-plasticsurgery {
   display: -ms-grid;
   display: grid;
@@ -2391,6 +2309,14 @@ details > summary::-webkit-details-marker {
 
 .consultation-block__description:not(:last-child) {
   margin-bottom: 3rem;
+}
+
+.spollers-plasticsurgery__title {
+  display: none;
+}
+
+.spollers-plasticsurgery__body {
+  margin-top: 3rem;
 }
 
 .news__navigation {
@@ -2926,6 +2852,10 @@ details > summary::-webkit-details-marker {
     padding-bottom: 2.5rem;
   }
 
+  .spollers-plasticsurgery__changes-links .changes-links__title {
+    font-size: 2.5rem;
+  }
+
   .changes-links__title {
     font-size: 2.5rem;
   }
@@ -3047,18 +2977,6 @@ details > summary::-webkit-details-marker {
 
   .tabs-changes__title span {
     font-size: 1.5rem;
-  }
-
-  .changes-links {
-    row-gap: 2.5rem;
-  }
-
-  .changes-links__item:not(:last-child) {
-    padding-bottom: 2.5rem;
-  }
-
-  .changes-links__title {
-    font-size: 2.5rem;
   }
 
   .plasticsurgery-page__title:not(:last-child) {
@@ -3367,6 +3285,11 @@ details > summary::-webkit-details-marker {
             flex: 0 0 3.5rem;
   }
 
+  .spollers-plasticsurgery__changes-links .changes-links__item {
+    border-bottom: none;
+    padding-bottom: 0rem;
+  }
+
   .header::before {
     content: "";
     content: "";
@@ -3442,6 +3365,10 @@ details > summary::-webkit-details-marker {
     font-weight: 500;
   }
 
+  .tabs-plasticsurgery__navigation {
+    display: none;
+  }
+
   .tabs-plasticsurgery__title span {
     padding: 0.875rem 1.25rem;
     text-align: center;
@@ -3452,6 +3379,11 @@ details > summary::-webkit-details-marker {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     justify-items: center;
+  }
+
+  .info-plasticsurgery__img {
+    -ms-grid-column-align: center;
+        justify-self: center;
   }
 
   .consultation-block {
@@ -3469,6 +3401,12 @@ details > summary::-webkit-details-marker {
 
   .consultation-block__surname {
     font-weight: 500;
+  }
+
+  .spollers-plasticsurgery__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 
   .item-news {
@@ -3572,19 +3510,6 @@ details > summary::-webkit-details-marker {
 
   .search-page__button::before {
     display: block;
-  }
-
-  .changes-links__title::before {
-    width: 3.5rem;
-    height: 3.5rem;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 3.5rem;
-            flex: 0 0 3.5rem;
-  }
-
-  .tabs-plasticsurgery__navigation {
-    -ms-grid-columns: (1fr)[2];
-    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -3700,6 +3625,10 @@ details > summary::-webkit-details-marker {
 
   .changes-links__item:not(:last-child) {
     padding-bottom: 2rem;
+  }
+
+  .spollers-plasticsurgery__changes-links .changes-links__title {
+    font-size: 1rem;
   }
 
   .changes-links__title {
@@ -3829,18 +3758,6 @@ details > summary::-webkit-details-marker {
 
   .tabs-changes__title span {
     font-size: 1rem;
-  }
-
-  .changes-links {
-    row-gap: 2rem;
-  }
-
-  .changes-links__item:not(:last-child) {
-    padding-bottom: 2rem;
-  }
-
-  .changes-links__title {
-    font-size: 1.5rem;
   }
 
   .plasticsurgery-page__title:not(:last-child) {
@@ -4241,6 +4158,18 @@ details > summary::-webkit-details-marker {
     }
 }
 
+@supports (font-size: clamp( 1rem , 0.4230769231rem  +  2.4615384615vw , 2.5rem )) {
+    .spollers-plasticsurgery__changes-links .changes-links__title {
+      font-size: clamp( 1rem , 0.4230769231rem  +  2.4615384615vw , 2.5rem );
+    }
+}
+
+@supports not (font-size: clamp( 1rem , 0.4230769231rem  +  2.4615384615vw , 2.5rem )) {
+    .spollers-plasticsurgery__changes-links .changes-links__title {
+      font-size: calc(1rem + 1.5 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
 @supports (font-size: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem )) {
     .changes-links__title {
       font-size: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem );
@@ -4600,42 +4529,6 @@ details > summary::-webkit-details-marker {
 @supports not (font-size: clamp( 1rem , 0.8076923077rem  +  0.8205128205vw , 1.5rem )) {
     .tabs-changes__title span {
       font-size: calc(1rem + 0.5 * (100vw - 23.4375rem) / 60.9375);
-    }
-}
-
-@supports (row-gap: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem )) {
-    .changes-links {
-      row-gap: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem );
-    }
-}
-
-@supports not (row-gap: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem )) {
-    .changes-links {
-      row-gap: calc(2rem + 0.5 * (100vw - 23.4375rem) / 60.9375);
-    }
-}
-
-@supports (padding-bottom: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem )) {
-    .changes-links__item:not(:last-child) {
-      padding-bottom: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem );
-    }
-}
-
-@supports not (padding-bottom: clamp( 2rem , 1.8076923077rem  +  0.8205128205vw , 2.5rem )) {
-    .changes-links__item:not(:last-child) {
-      padding-bottom: calc(2rem + 0.5 * (100vw - 23.4375rem) / 60.9375);
-    }
-}
-
-@supports (font-size: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem )) {
-    .changes-links__title {
-      font-size: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem );
-    }
-}
-
-@supports not (font-size: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem )) {
-    .changes-links__title {
-      font-size: calc(1.5rem + 1 * (100vw - 23.4375rem) / 60.9375);
     }
 }
 
@@ -5056,7 +4949,16 @@ details > summary::-webkit-details-marker {
     color: #fff;
   }
 
-  .changes-links__item:nth-child(odd) .changes-links__title:hover + .changes-links__image {
+  .changes-links__item:hover .changes-links__title::before {
+    background-color: #1e78ff;
+    color: #fff;
+    border: 0.0625rem solid #1e78ff;
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  .changes-links__item:nth-child(odd):hover .changes-links__title + .changes-links__image {
     visibility: visible;
     opacity: 1;
     -webkit-transform: rotate(15.037deg) scale(1);
@@ -5064,21 +4966,12 @@ details > summary::-webkit-details-marker {
             transform: rotate(15.037deg) scale(1);
   }
 
-  .changes-links__item:nth-child(even) .changes-links__title:hover + .changes-links__image {
+  .changes-links__item:nth-child(even):hover .changes-links__title + .changes-links__image {
     visibility: visible;
     opacity: 1;
     -webkit-transform: rotate(-15.037deg) scale(1);
         -ms-transform: rotate(-15.037deg) scale(1);
             transform: rotate(-15.037deg) scale(1);
-  }
-
-  .changes-links__title:hover::before {
-    background-color: #1e78ff;
-    color: #fff;
-    border: 0.0625rem solid #1e78ff;
-    -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-            transform: rotate(0deg);
   }
 
   .footer__tg:hover,
@@ -5122,31 +5015,6 @@ details > summary::-webkit-details-marker {
   .tabs-changes__title:hover img {
     -webkit-filter: grayscale(0);
             filter: grayscale(0);
-  }
-
-  .changes-links__item:hover .changes-links__title::before {
-    background-color: #1e78ff;
-    color: #fff;
-    border: 0.0625rem solid #1e78ff;
-    -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-
-  .changes-links__item:nth-child(odd):hover .changes-links__title + .changes-links__image {
-    visibility: visible;
-    opacity: 1;
-    -webkit-transform: rotate(15.037deg) scale(1);
-        -ms-transform: rotate(15.037deg) scale(1);
-            transform: rotate(15.037deg) scale(1);
-  }
-
-  .changes-links__item:nth-child(even):hover .changes-links__title + .changes-links__image {
-    visibility: visible;
-    opacity: 1;
-    -webkit-transform: rotate(-15.037deg) scale(1);
-        -ms-transform: rotate(-15.037deg) scale(1);
-            transform: rotate(-15.037deg) scale(1);
   }
 
   .tabs-plasticsurgery__title:hover {
